# qasmfmt

./: .editorconfig  .gitignore  .golangci.yml  .goreleaser.yml  .tagpr  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  LLM_CODE_REVIEW_SETUP.md  PARSER_ISSUES.md  README.md  TODO.md  Taskfile.yaml  Taskfile.yml  demo.tape  go.mod  go.sum  index.d.ts  index.js  justfile  main.go  package.json  pyproject.toml  spec.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  format.yml  llm-code-review.yml  release.yml  tagpr.yml  test.yml
.task/checksum/: build
cmd/: check.go  completion.go  config_test.go  format.go  format_test.go  formatter.go  formatter_test.go  root.go  version.go
docs/: book.toml
docs/src/: README.md  SUMMARY.md  cli.md  configuration.md  getting-started.md  installation.md
docs/src/development/: architecture.md  contributing.md
docs/src/rules/: overview.md  style-analysis.md
python/qasmfmt/: __init__.py  __main__.py
src/: comment.rs  error.rs  format.rs  ir.rs  lib.rs  main.rs  printer.rs
tests/: golden.rs
tests/fixtures/assignment/: input.qasm  output.qasm
tests/fixtures/barrier/: input.qasm  output.qasm
tests/fixtures/basic/: input.qasm
tests/fixtures/declarations/: input.qasm  output.qasm
tests/fixtures/gate_calls/: input.qasm  output.qasm
tests/fixtures/gate_definition/: input.qasm  output.qasm
tests/fixtures/include_statement/: input.qasm  output.qasm
tests/fixtures/minified/: input.qasm  output.qasm
tests/fixtures/version_declaration/: input.qasm  output.qasm
