[package]
name = "qasmfmt"
version = "0.0.1"
edition = "2024"
description = "OpenQASM 3.0 formatter"
license = "MIT"
repository = "https://github.com/orangekame3/qasmfmt"
keywords = ["openqasm", "quantum", "formatter"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "qasmfmt"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.8"
oq3_syntax = { git = "https://github.com/Qiskit/openqasm3_parser", branch = "main" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.5"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]

[[bin]]
name = "qasmfmt"
path = "src/main.rs"
